<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name"><xliff:g id="appname">Tomdroid</xliff:g></string>
	<string name="app_desc">Tomboy compatible wikiwiki note-taking app.</string>
	<string name="author"><xliff:g id="author">Olivier Bilodeau</xliff:g></string>
	<string name="strListEmptyWaiting">Please wait while the notes load<xliff:g id="points">…</xliff:g></string>
	<string name="strListEmptyNoNotes">You don\'t have any notes yet.</string>
	<string name="menuSync">Sync</string>
	<string name="menuPrefs">Settings</string>
	<string name="menuAbout">About</string>
	<string name="titleWelcome">Warning</string>
	<string name="titleAbout">About <xliff:g id="appname">%1$s</xliff:g></string>
	<string name="strWelcome">Welcome to Tomdroid.<xliff:g id="linebreak">\n\n</xliff:g>Please note that this is beta quality software and that it contains known problems.<xliff:g id="linebreak">\n\n</xliff:g>We are well aware of these issues and intend to work on them quickly but I also wanted to get something out and tested as quickly as possible.<xliff:g id="linebreak">\n\n</xliff:g>If you would like to contribute, help at all levels would be appreciated. Hop on board on launchpad.net/tomdroid and contact us!<xliff:g id="linebreak">\n</xliff:g></string>
	<string name="strAbout"><xliff:g id="description" example="Note taking app">%1$s\n\n</xliff:g>Author<xliff:g id="author" example=": Max Example">: %2$s\n</xliff:g>Version<xliff:g id="version" example="0.7.4">: %3$s\n</xliff:g>Licensed under the GPLv3</string>
	<string name="btnOk">OK</string>
	<string name="btnCancel">Cancel</string>
	<string name="btnClose">Close</string>
	<string name="btnProjectPage">Project page</string>
	<string name="btnSavetoSD">Save</string>
	<string name="strWait">Please wait while note loads<xliff:g id="points">…</xliff:g></string>
	<string name="prefSyncService">Service</string>
	<string name="prefSyncServer">Server</string>
	<string name="prefSDCard">SD Card</string>
	<string name="prefTomboyWeb">Online Synchronization</string>
	<string name="prefAuthenticate">Authenticate</string>
	<string name="prefLocation">Location on SD Card</string>
	<string name="prefSyncOnStart">Autosync on Startup</string>
	<string name="prefDescSyncOnStart">Synchronise your notes on appstart</string>
	<string name="prefFolderCreated">The folder <xliff:g id="folder_path" example="/sdcard/example">\"%1$s\"</xliff:g> does not exist yet. Please connect your device to the computer, create the folder and fill it with *.note files.</string>
	<string name="prefNoValidLocation"><xliff:g id="folder_path" example="/sdcard/example">\"%1$s\"</xliff:g> is not a valid folder location. Please try again!</string>
	<string name="prefNoValidEntry"><xliff:g id="text" example="text entry">\"%1$s\"</xliff:g> is not a valid entry. Please try again!</string>
	<string name="prefSyncCompleteAuth">Completing authentication. Please wait<xliff:g id="points">…</xliff:g></string>
	<string name="prefSyncConnectionFailed">The connection to the server has failed, please check that the address you entered is correct.</string>
	<string name="prefServerEmpty">The server address changed but the new value is empty</string>
	<string name="titleSyncService">Choose the sync service to use</string>
	<string name="messageSyncComplete">Synchronization with <xliff:g id="SyncService" example="SD Card">%1$s</xliff:g> is complete.</string>
	<string name="messageSyncNoNote">No notes found on <xliff:g id="Location" example="SD Card">%1$s</xliff:g>.</string>
	<string name="messageSyncNoConnection">You are not connected to the Internet.</string>
	<string name="messageSyncAlreadyInProgress">Sync already in progress</string>
	<string name="messageSyncError">There was an error trying to read your note collection. If you are able to replicate the problem, please contact us!</string>
	<string name="error">Error</string>
	<string name="titleNoteNotFound">No Such Note</string>
	<string name="messageNoteNotFound">The requested note could not be found. Maybe it was deleted or removed through synchronization.</string>
	<string name="messageErrorNoteParsing">Error reading note.</string>
	<string name="messageCouldNotSave">Could not save note.</string>
	<string name="messageNoSDCard">SD Card storage not found.</string>
	<string name="titleDefaultSorting">Choose default sorting method</string>
	<string name="prefDefaultSortingTitle">Default Sort Method</string>
	<string name="prefSorting">Sort By:</string>
	<string name="prefSortDate">Date Modified</string>
	<string name="prefSortTitle">Note Title</string>
	<string name="sortByDate">Sort by Date</string>
	<string name="sortByTitle">Sort by Title</string>
	<string name="menuFilterNotebook">Filter</string>
	<string name="strListEmptyNoNotebooks">There are no notebooks in the database.</string>
	<string name="allNotebooksFilter">All notebooks</string>
	<string name="view">View</string>
	<string name="noteOptions">Note Options</string>
	<string name="send">Send</string>
	<string name="search_hint">Search Notes</string>
	<string name="search_description">Text in your notes</string>
	<string name="strNoResults">No notes found for <xliff:g id="SearchTerm" example="Search Term">\"%s\"</xliff:g></string>
	<string name="menuSearch">Search</string>
	<string name="SearchResultTitle">Search Results:</string>
	<string name="clearSearchHistoryTitle">Clear search history</string>
	<string name="clearSearchHistory">Remove all the searches you have performed</string>
	<string name="deletedSearchHistory">Search history has been cleared.</string>
	<string name="textModified">Modified:</string>
	<string name="textToday">Today</string>
	<string name="textYexterday">Yesterday</string>
	<string name="shortcuts_view_caption">Choose a Note</string>
	<string name="shortcut_menu_item_caption">Tomdroid Note</string>
	<string name="btnRemoveShortcut">Remove shortcut</string>
	<string name="createShortcut">Create shortcut</string>
	<string name="delete">Delete</string>
	<string name="delete_note">Delete Note</string>
	<string name="delete_message">Are you sure you want to delete this note?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="delete_all">Clear Notes</string>
	<string name="delete_all_message">Are you sure you want to clear the notes database?</string>
	<string name="delete_remote_notes">Delete Remote Notes</string>
	<string name="delete_remote_notes_message">Are you sure you want to delete all notes from the remote service?</string>
	<string name="menuNew">New</string>
	<string name="NewNoteTitle">New Note</string>
	<string name="NewNoteTitleHint">Enter title here</string>
	<string name="NewNoteBodyHint">Enter note here</string>
	<string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="discard">Discard</string>
	<string name="back">Back</string>
	<string name="bold">B</string>
	<string name="italic">i</string>
	<string name="strike"><strike>S</strike></string>
	<string name="mono">monospace</string>
	<string name="highlight">highlight</string>
	<string name="size">size</string>
	<string name="titleErrorParsingXML">Error parsing note</string>
	<string name="messageErrorParsingXML">There was an error parsing the note. Please check your XML.</string>
	<string name="messageNoteSaved">Note saved locally.</string>
	<string name="messageNoteDeleted">Note deleted locally.</string>
	<string name="messageSelectSize">Select text size</string>
	<string name="small">Small</string>
	<string name="normal">Normal</string>
	<string name="large">Large</string>
	<string name="huge">Huge</string>
	<string name="messageDiscardChanges">Do you really want to discard your changes and revert the note to the last saved version?</string>
	<string name="titleDiscardChanges">Discard Changes?</string>
	<string name="gt"><b>&gt;</b></string>
	<string name="lt"><b>&lt;</b></string>
	<string name="view_title"><xliff:g id="appname">Tomdroid - </xliff:g>View Note</string>
	<string name="edit_title"><xliff:g id="appname">Tomdroid - </xliff:g>Edit Note</string>
	<string name="search_title"><xliff:g id="appname">Tomdroid - </xliff:g>Search Results</string>
	<string name="shortcut_title"><xliff:g id="appname">Tomdroid - </xliff:g>Shortcuts</string>
	<string name="pref_title"><xliff:g id="appname">Tomdroid - </xliff:g>Settings</string>
	<string name="compare_title"><xliff:g id="appname">Tomdroid - </xliff:g>Note Conflict</string>
	<string name="filePickerTitle"><xliff:g id="appname">Tomdroid - </xliff:g>Import Note</string>
	<string name="prefDisplay">Display Preferences</string>
	<string name="prefBaseSize">Base Font Size</string>
	<string name="prefSync">Synchronization</string>
	<string name="prefTools">Tools</string>
	<string name="prefAutoSave">Save notes automatically on exiting editor.</string>
	<string name="prefDeletedNotesTitle">Show Deleted Notes</string>
	<string name="prefDeletedNotes">If checked, will show deleted notes in notes list.</string>
	<string name="prefNoteTemplatesTitle">Show Note Templates</string>
	<string name="prefNoteTemplates">If checked, will show note templates in notes list.</string>
	<string name="deleteAllNotesTitle">Clear Notes</string>
	<string name="deleteAllNotes">Clear all notes from local database</string>
	<string name="deleteRemoteNotesTitle">Delete Remote Notes</string>
	<string name="deleteRemoteNotes">Delete all notes from remote service</string>
	<string name="illegalTextSize">Illegal text size chosen. Please choose a number.</string>
	<string name="backupPrefTitle">Backup Notes</string>
	<string name="backupPref">Copy all local notes to SD Card</string>
	<string name="autoBackupPrefTitle">Auto-Backup</string>
	<string name="autoBackupPref">Copy local note to SD Card on save</string>
	<string name="prefLinks">Hyperlink Preferences</string>
	<string name="prefLinkTitlesTitle">Link Titles</string>
	<string name="prefLinkTitles">Link to other note titles</string>
	<string name="prefLinkUrlsTitle">Link Web Addresses"</string>
	<string name="prefLinkUrls">e.g. <xliff:g id="url">"www.google.com"</xliff:g></string>
	<string name="prefLinkEmailsTitle">Link Emails</string>
	<string name="prefLinkEmails">e.g. <xliff:g id="email">name@address.com</xliff:g></string>
	<string name="prefLinkPhonesTitle">Link Telephone Numbers</string>
	<string name="prefLinkPhones">Link telephone numbers to phone app</string>
	<string name="prefLinkAddressesTitle">Link Map Addresses</string>
	<string name="prefLinkAddresses">Link addresses to maps app</string>
	<string name="syncing">Syncing with <xliff:g id="SyncService" example="SD Card">%1$s</xliff:g></string>
	<string name="syncing_connect">connecting to service<xliff:g id="points">…</xliff:g></string>
	<string name="gettings_notes">getting list of remote notes<xliff:g id="points">…</xliff:g></string>
	<string name="syncing_local">updating local notes<xliff:g id="points">…</xliff:g></string>
	<string name="syncing_remote">updating remote notes<xliff:g id="points">…</xliff:g></string>
	<string name="sync_conflict_description">There was a conflict syncing the note <xliff:g id="Notetitle" example="Note Title">\'%1$s\'</xliff:g></string>
	<string name="sync_conflict_message">Please choose an action to resolve the conflict.  You may edit either note before choosing, or view the difference by clicking on the labels below.</string>
	<string name="overwrite_remote">Overwrite<xliff:g id="linebreak">\n</xliff:g>Remote</string>
	<string name="overwrite_local">Overwrite<xliff:g id="linebreak">\n</xliff:g>Local</string>
	<string name="copy">Create<xliff:g id="linebreak">\n</xliff:g>Copy</string>
	<string name="diff_label">Difference Between Files</string>
	<string name="local_label">Local Version</string>
	<string name="remote_label">Remote Version</string>
	<string name="menuImport">Import Note</string>
	<string name="menuRevert">Revert All</string>
</resources>