<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	                        
	<PreferenceCategory android:title="@string/prefSync">
		
		<ListPreference android:title="@string/prefSyncService"
						android:dialogTitle="@string/titleSyncService"
						android:key="sync_service" 
						android:defaultValue="tomboy-web"/>
						
		<EditTextPreference android:key="sync_server"
							android:title="@string/prefSyncServer"
							android:positiveButtonText="@string/prefAuthenticate"
							android:shouldDisableView="true"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/menuSearch">
		<Preference
                android:title="@string/clearSearchHistoryTitle"
                android:summary="@string/clearSearchHistory"
                android:key="clearSearchHistory" />
	</PreferenceCategory>
	
</PreferenceScreen>